code cleanup
Signed-off-by: Mohab Mohie <Mohab.MohieElDeen@outlook.com>